# my_llm_project

./: .cz.yaml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Tiltfile  pyproject.toml
.github/workflows/: python-app.yml
.tilt/: .dockerignore  Tiltfile
.tilt/k8s/: init.sql  k8s.yaml  postgres.yaml
app/: db.py  main.py  models.py
app/static/: index.html
k8s/: init.sql  k8s.yaml  postgres.yaml
tests/: test_main.py
