[project]
name = "my-llm-project"
version = "0.1.0"
description = "FastAPI + Transformers LLM"
authors = [
    {name = "Oded Masala",email = "odedmasala6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "openai (>=1.88.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
