[tool.poetry]
name = "my-llm-project"
version = "0.1.0"
description = "FastAPI + Transformers LLM"
authors = ["Oded Masala <odedmasala6@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
transformers = "^4.52.4"
openai = "^1.88.0"
torch = "^2.7.1"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.0"
greenlet = "^3.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
