[tool.poetry]
name = "my-llm-project"
version = "0.1.0"
description = "FastAPI + Transformers LLM"
authors = ["Oded Masala <odedmasala6@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
transformers = "^4.52.4"
openai = "^1.88.0"
torch = "^2.7.1"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.0"
greenlet = "^3.2.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
flake8 = "^7.0.0"
aiosqlite = "^0.21.0"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", "build", "dist"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
